Release v0.54.0 command center workflows
